--- a/src/app/weathercast-chart/weathercast-chart.component.html
+++ b/src/app/weathercast-chart/weathercast-chart.component.html
@@ -1,1 +1,11 @@
-<h2>Weathercast chart</h2>
+<div id="chart">
+    <apx-chart *ngIf="chartOptions"
+      [series]="chartOptions.series!"
+      [chart]="chartOptions.chart!"
+      [xaxis]="chartOptions.xaxis!"
+      [dataLabels]="chartOptions.dataLabels!"
+      [grid]="chartOptions.grid!"
+      [stroke]="chartOptions.stroke!"
+      [title]="chartOptions.title!">
+    </apx-chart>
+</div>
