--- a/src/app/weathercast-table/weathercast-table.component.html
+++ b/src/app/weathercast-table/weathercast-table.component.html
@@ -1,1 +1,46 @@
-<h2>Weathercast table</h2>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSortChange($event)">
+  
+      <ng-container matColumnDef="dateTime">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.dateTime | date: 'EEEE, MMMM d, HH:mm'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="weatherCode">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Weather Code </th>
+        <td mat-cell *matCellDef="let element"> {{element.weatherCode}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="temperature">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Temperature °C</th>
+        <td mat-cell *matCellDef="let element"> {{element.temperature | number: '.1-1'}}°C </td>
+      </ng-container>
+
+      <ng-container matColumnDef="surfacePressure">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Surface Pressure </th>
+        <td mat-cell *matCellDef="let element"> {{element.surfacePressure / 1000 | number: '.3-3'}} hPa </td>
+      </ng-container>
+
+      <ng-container matColumnDef="relativeHumidity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Relative Humidity %</th>
+        <td mat-cell *matCellDef="let element"> {{element.relativeHumidity}}% </td>
+      </ng-container>
+
+      <ng-container matColumnDef="precipitationProbability">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Precipitation Probability %</th>
+        <td mat-cell *matCellDef="let element"> {{element.precipitationProbability}}% </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator 
+      [length]="totalRows"
+      [pageSize]="rowsPerPage" 
+      [pageSizeOptions]="pageSizeOptions"
+      showFirstLastButtons
+      (page)="onChangedPage($event)"
+      aria-label="">
+    </mat-paginator>
+</div>
