--- a/src/app/weathercast-table/weathercast-table.component.html
+++ b/src/app/weathercast-table/weathercast-table.component.html
@@ -44,3 +44,32 @@
       aria-label="">
     </mat-paginator>
 </div>
+<div>
+  <mat-checkbox class="example-margin" color="primary" (change)="onShowHistoricalData($event)">Show historical data</mat-checkbox>
+  <div *ngIf="showHistoricalData" class="pastDaysContainer">
+    <mat-form-field>
+      <mat-label>Number of past days</mat-label>
+      <mat-select #pastDaysSelect
+          [(ngModel)]="pastDaysCount" 
+          required>
+              <mat-option value="1">1</mat-option>
+              <mat-option value="2">2</mat-option>
+              <mat-option value="3">3</mat-option>
+              <mat-option value="4">4</mat-option>
+              <mat-option value="5">5</mat-option>
+              <mat-option value="6">6</mat-option>
+              <mat-option value="7">7</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-flat-button 
+          color="primary" 
+          type="button" 
+          (click)="onAddHistoricalData()">Add historical data</button>
+  </div>
+  <div *ngIf="hasShownHistoricalData && !showHistoricalData">
+    <button mat-flat-button 
+          color="primary" 
+          type="button" 
+          (click)="onAddHistoricalData(true)">Remove historical data</button>
+  </div>
+</div>
