--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+  <img src="assets/purpleLogo.jpg" alt="Logo">
   <a mat-tab-link 
     *ngFor="let link of navLinks"
     [routerLink]="link.path"
@@ -7,6 +8,9 @@
       {{ link.label }}
   </a>
 </nav>
-<mat-tab-nav-panel #tabPanel>
-  <router-outlet></router-outlet>
-</mat-tab-nav-panel>
+<div class="container">
+  <mat-tab-nav-panel #tabPanel>
+    <router-outlet></router-outlet>
+  </mat-tab-nav-panel>
+</div>
+
